@@ -1,3 +1,6 @@
+2012-08-08  Kirit Saelensminde  <kirit@felspar.com>
+ The parser lock is now recursive. This means that we can be more aggressive about using it without causing deadlocks.
+
 2012-08-04  Kirit Saelensminde  <kirit@felspar.com>
  Deliberately leak the thread counter so that it can't be destructed before threads that are terminating in a global destructor get run.
 
